--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bok Learning Lab",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@slack/bolt": "^3.17.1",
+    "airtable": "^0.12.2",
+    "learninglab-log": "^1.0.2",
+    "openai": "^4.33.0"
+  }
 }
